# SMBR-can-core-module

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  core-module.service
source/: TLA2024.hpp  core_module.cpp  core_module.hpp  gpio.hpp  i2c_bus.cpp  i2c_bus.hpp  i2c_device.hpp  interface_board.cpp  interface_module.cpp  interface_module.hpp  main.cpp  main.hpp  rpi_host.cpp  rpi_host.hpp
source/can/: can_interface.hpp  can_receiver.cpp  can_receiver.hpp
